# fed

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  Rocket.toml  deploy.yml  todo.txt
enum_flatten/: Cargo.toml
enum_flatten/src/: lib.rs
enum_flatten_derive/: Cargo.toml
enum_flatten_derive/src/: lib.rs
eventually_api/: Cargo.toml
eventually_api/src/: eventually.rs  eventually_schema.rs  lib.rs
fed/: Cargo.toml
fed/src/: error.rs  event_schema.rs  feed_event_util.rs  filter_feed.rs  generate_schema.rs  ingest.rs  lib.rs  main.rs  parse.rs  peekable_with_logging.rs  test.rs
fed/src/fed_event/: fed_event_impl.rs  mod.rs
fed/src/parse/: builder.rs  error.rs  event_builder_new.rs  event_schema.rs  feed_event_util.rs  mod.rs  parse_wrapper.rs  parsers.rs  stream.rs
fed/src/server/: main.rs
fed_api/: Cargo.toml
fed_api/src/: eventually.rs  eventually_schema.rs  lib.rs
fed_api/src/eventually_schema/: builder.rs
fed_server/: Cargo.toml
fed_server/src/: main.rs  test.rs
fed_tools/: Cargo.toml
fed_tools/src/: filter_feed.rs  generate_schema.rs  test.rs
seen_structure/: Cargo.toml
seen_structure/src/: base_impls.rs  lib.rs
seen_structure_derive/: Cargo.toml
seen_structure_derive/src/: lib.rs
with_structure/: Cargo.toml
with_structure/src/: base_impls.rs  lib.rs
with_structure_derive/: Cargo.toml
with_structure_derive/src/: lib.rs
