[package]
name = "enum_flatten_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.36"
itertools = "0.11.0"
macro_state = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"