[package]
name = "eventually_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
derive_builder = "0.12.0"
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.17"
num_enum = "0.5.7"
pot = "1.0.2"
reqwest = "0.11.11"
schemars = { version = "0.8.11", features = ["chrono", "uuid1", "preserve_order"] }
serde = "1.0.138"
serde_json = "1.0.82"
serde_repr = "0.1.8"
sled = "0.34.7"
uuid = { version = "1.2.2", features = ["serde"] }
