[package]
name = "fed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
fed_api = { path = "../fed_api" }
thiserror = "1.0.31"
nom = "7.1.1"
chrono = { version = "0.4.19" }
assert-json-diff = "2.0.2"
serde_json = "1.0.82"
uuid = "1.1.2"
itertools = "0.10.3"
num_enum = "0.5.7"