[package]
name = "fed"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "filter_feed"
path = "src/filter_feed.rs"

[[bin]]
name = "generate_schema"
path = "src/generate_schema.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
fed_api = { path = "../fed_api" }
thiserror = "1.0.31"
nom = "7.1.1"
chrono = { version = "0.4.19", features = ["serde"] }
assert-json-diff = "2.0.2"
serde = "1.0.147"
serde_json = "1.0.82"
uuid = "1.1.2"
itertools = "0.10.3"
num_enum = "0.5.7"
derive_builder = "0.11.2"
indicatif = "0.17.1" # Only needed for test.rs
json-structural-diff = "0.1.0" # Only needed for test.rs
par-iter-sync = "0.1.10" # Only needed for test.rs
anyhow = "1.0.66" # Only needed for test.rs
schemars = { version = "0.8.11", features = ["chrono", "uuid1"] }
