[package]
name = "fed_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
futures = "0.3.21"
itertools = "0.10.3"
log = "0.4.17"
reqwest = "0.11.11"
serde = "1.0.138"
serde_json = "1.0.82"
serde_repr = "0.1.8"
sled = "0.34.7"
uuid = { version = "1.1.2", features = ["serde"] }
num_enum = "0.5.7"
derive_builder = "0.11.2"
pot = "1.0.2"
