[package]
name = "fed_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert-json-diff = "2.0.2"
chrono = { version = "0.4.19", features = ["serde"] }
eventually_api = { path = "../eventually_api" }
fed = { path = "../fed" }
itertools = "0.11.0"
num_enum = "0.7.0"
reqwest = { version = "0.11.13", features = ["json", "gzip"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.147"
serde_json = "1.0.82"
thiserror = "1.0.31"
uuid = "1.1.2"