[package]
name = "fed_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test"
path = "src/test.rs"

[[bin]]
name = "filter_feed"
path = "src/filter_feed.rs"

[[bin]]
name = "generate_schema"
path = "src/generate_schema.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
fed = { path = "../fed" }
eventually_api = { path = "../eventually_api" }
indicatif = "0.17.1"
json-structural-diff = "0.1.0"
par-iter-sync = "0.1.10"
schemars = { version = "0.8.11", features = ["chrono", "uuid1", "preserve_order"] }
seen_structure = { path = "../seen_structure" }
serde = "1.0.147"
serde_json = "1.0.82"
chrono = "0.4.23"
itertools = "0.10.5"
flate2 = "1.0.25"